@@ -7,7 +7,7 @@ copyright_year   = 2025
 
 main_module	= lib/Astro/ADS.pm
 
-version = 1.90_70
+version = 1.91
 
 [Prereqs::FromCPANfile]
 
