@@ -103,7 +103,7 @@ Astro::ADS - Perl library to connect with the Harvard Astrophysical Data Service
 
 =head1 VERSION
 
-version 1.90
+version 1.91
 
 =head1 SYNOPSIS
 
