@@ -1,4 +1,7 @@
 {{$NEXT}}
+===
+* Citation Metrics Report - added all 3 endpoints
+* fixed post_response method in Astro::ADS to send json payload
 
 1.90_70   2025 Jul 18 (TRIAL RELEASE)
 ====
